--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 :root {
-    --clr-main: #c56cee;
+    --clr-main: #f764b5;
     --clr-main-light: #efdaf9;
 }
 
@@ -21,7 +22,7 @@
 }
 
 .navbar {
-    padding: 2rem;
+    padding: 1.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,6 +88,9 @@
     width: max-content;
     border-radius: .5rem;
     transition: .2s;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .producto .ver-mas:hover {
