--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,6 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    align-items: flex-start;
 }
 
 .formulario input {
@@ -174,6 +173,29 @@
     width: 18rem;
     border-radius: .5rem;
     border: 2px solid black;
+}
+.formulario .form-input, .contacto-texto{
+    padding: 1rem;
+    text-align: center;
+}
+
+.encuentranos{
+    margin: 2rem;
+    border: 2px solid black;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.encuentranos .titulo-encuentranos, .encuentranos-texto{
+    margin: 0.5rem;
+    padding: 0.5rem;
+
+}
+.formulario .form-input{
+    margin-top: 1rem;
+    margin: 0 auto;
 }
 
 .formulario input:focus {
@@ -183,6 +205,34 @@
 }
 
 .containerContacto{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    border-radius: 15px;
     margin: 1rem;
     padding: 1rem;
+}
+
+.containerContacto .contacto-titulo{
+    text-align: center;
+}
+
+.contactanos{
+    text-align: center;
+}
+
+.nosotros{
+    border: 2px solid black;
+    border-radius: 15px;
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+
+}
+.nosotros .titulo-nosotros{ 
+    text-align: center;
+}
+.nosotros .texto-nosotros{
+    text-align: center;
 }
